update: add section partial hero

--- a/app/apps/pages/templates/pages_home.html
+++ b/app/apps/pages/templates/pages_home.html
@@ -4,13 +4,8 @@
 {% block title %}Inicio - Innova7e{% endblock %}
 
 {% block content %}
-<section id="hero" class="text-center text-white bg-dark py-5">
-    <div class="container">
-        <h1 class="display-4">Potencia tu negocio y destaca en el mundo digital</h1>
-        <p class="lead">Descubre cómo nuestros servicios pueden llevar tu negocio al siguiente nivel.</p>
-        <a href="#services" class="btn btn-primary btn-lg">Conócenos</a>
-    </div>
-</section>
+
+{% include "partials/partial_hero.html" %}
 
 <section id="services-benefits" class="py-5">
     <div class="container">
