--- a/app/apps/pages/templates/partials/partial_hero.html
+++ b/app/apps/pages/templates/partials/partial_hero.html
@@ -1,7 +1,7 @@
 <section id="hero" class="text-center text-white bg-dark py-5">
     <div class="container">
-        <h1 class="display-4">Potencia tu negocio y destaca en el mundo digital</h1>
-        <p class="lead">Descubre cómo nuestros servicios pueden llevar tu negocio al siguiente nivel.</p>
-        <a href="#services" class="btn btn-primary btn-lg">Conócenos</a>
+        <h1>{{ page_title }}</h1>
+        <p>{{ page_subtitle }}</p>
+        <a href="#services" class="btn btn-primary btn-lg">¡Conócenos!</a>
     </div>
 </section>
