modificar: tamaño de los titulosa y subtitulos

--- a/app/apps/pages/templates/partials/partial_contact.html
+++ b/app/apps/pages/templates/partials/partial_contact.html
@@ -3,8 +3,8 @@
         <div class="row align-items-center">
             <!-- Título -->
             <div class="col-12 text-center mb-4">
-                <h2 class="fw-bold">CONTACTANOS</h2>
-                <p class="text-muted">Trabajemos juntos</p>
+                <h2 class="fw-bold, display-4">CONTACTANOS</h2>
+                <p class="text-muted, display-5">Trabajemos juntos</p>
             </div>
         </div>
         <div class="row">
