--- a/app/apps/pages/templates/pages_home.html
+++ b/app/apps/pages/templates/pages_home.html
@@ -10,7 +10,7 @@
 {% include "partials/partial_benefits.html" %}
 {% include "partials/partial_services.html" %}
 {% include "partials/partial_testimonials-faqs.html" %}
-{% include "partials/partial_frequently_asked_questions.html" %}
+{% include "partials/partial_faq.html" %}
 {% include "partials/partial_contact.html" %}
 
 {% endblock %}
